Bug 429600 - Highlight the lines coming into view (HighlightScrolledLines) feature breaks Initial terminal size
Summary: Highlight the lines coming into view (HighlightScrolledLines) feature breaks ...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2020-11-24 19:39 UTC by Oleg Girko
Modified: 2020-12-24 02:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Girko 2020-11-24 19:39:38 UTC
SUMMARY

The new HighlightScrolledLines (Highlight the lines coming into view) feature appeared in Konsole 20.08.
This feature is on by default and it causes several pixels of Konsole width to be used for indicating lines coming into view.
However these pixels are not taken into account when calculating initial window size. This breaks Initial terminal size feature.

STEPS TO REPRODUCE
1. Set Initial terminal size in Profile -> your profile name -> General to the size you like.
2. Set "restore window size" to false in Konsole settings -> General.
3. Start new Konsole instance.
4. Run "stty -a" in Konsole you've just started and observe "columns" parameter.

OBSERVED RESULT
The "columns" parameter in "stty -a" output is less than you configured in Initial terminal size.

EXPECTED RESULT
The "columns" parameter in "stty -a" output should match the one you configured in Initial terminal size.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 32 with Konsole 20.08.3, Fedora 33 with Konsole 20.08.1
KDE Plasma Version: 5.18.5, 5.19.5
KDE Frameworks Version: 5.75.0
Qt Version: 5.14.2, 5.15.1

ADDITIONAL INFORMATION
This problem goes away when setting HighlightScrolledLines (Highlight the lines coming into view) to false.

Although I've selected "Fedora RPMs" as the Platform, I presume that this problem is not specific to Fedora. However, I didn't test on other platforms.
Comment 1 Oleg Girko 2020-11-24 23:57:50 UTC
Why was severity downgraded to minor?
Being unable to start Konsole with the size specified in settings is quite a major annoyance.
Comment 2 Christoph Feck 2020-11-25 00:48:10 UTC
Increase the count of columns by one as a simple workaround.
Comment 3 Vedang 2020-12-23 11:22:30 UTC
Hi,

If this issue is still open, may I give it a shot?
Comment 4 Bug Janitor Service 2020-12-23 18:26:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/315
Comment 5 Kurt Hindenburg 2020-12-24 02:05:43 UTC
Git commit 46d9100f453ef421a382ab6fe40d8a547eac2036 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 24/12/2020 at 02:02.
Pushed by hindenburg into branch 'master'.

Correct columns size with highlightScrolledLines

When highlightScrolledLines is set to display the Konsole new window
will open with the display profile terminal size columns  - 1.
Now it will check the options and correct the Konsole size to display
all columns set in profile terminal size.

M  +5    -1    src/session/SessionManager.cpp

https://invent.kde.org/utilities/konsole/commit/46d9100f453ef421a382ab6fe40d8a547eac2036
Comment 6 Kurt Hindenburg 2020-12-24 02:19:18 UTC
Git commit 457e590c26add6edafcae4a6c10d1d9277ed4818 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 24/12/2020 at 02:16.
Pushed by hindenburg into branch 'release/20.12'.

Correct columns size with highlightScrolledLines

When highlightScrolledLines is set to display the Konsole new window
will open with the display profile terminal size columns  - 1.
Now it will check the options and correct the Konsole size to display
all columns set in profile terminal size.
(cherry picked from commit 46d9100f453ef421a382ab6fe40d8a547eac2036)

M  +5    -1    src/session/SessionManager.cpp

https://invent.kde.org/utilities/konsole/commit/457e590c26add6edafcae4a6c10d1d9277ed4818