Correct columns size with highlightScrolledLines

When highlightScrolledLines is set to display the Konsole new window
will open with the display profile terminal size columns  - 1.
Now it will check the options and correct the Konsole size to display
all columns set in profile terminal size.

BUG: 429600